# iron-array-python

./: .build_wheels_in_manylinux.sh  .coveragerc  .envrc  .git-blame-ignore-revs  .gitignore  .gitmodules  ANNOUNCE.md  CMakeLists.txt  DEVELOPMENT_GUIDELINES.md  FindOMP.cmake  Makefile  README.md  RELEASE-NOTES.md  RELEASING.md  TODO-LLVM.txt  TODO.txt  azure-pipelines-wheels-test.yml  azure-pipelines-wheels.yml  azure-pipelines-wheels2.yml  azure-pipelines.yml  ciarray.pxd  iarray.pyx  iarray_ext.pyx  pyproject.toml  pytest.ini  requirements-build.txt  requirements-dev.txt  requirements-doc.txt  requirements-runtime.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  test.py
PyData-NYC-2019/: azure-1thread-system-python-afterfix.out  azure-1thread.out  azure-4thread-iterblosc-LLVM.out  azure-4thread-system-python-afterfix.out  azure-4thread-system-python.out  azure-4thread.out  azure-8thread-iterblosc-LLVM.out  azure-description.out  azure-software-versions.out  compute-expressions.ipynb  ia-data-converter.py  ia-getslices.py  ia-getslices2.py  ia-getslices3.py  ia-getslices4.py  iarray-in-memory-benchs.ods  matmul-comparative.py  matmul-comparison.py  netcdf4-data-converter.py  netcdf4-getslices.py  netcdf4-getslices3.py  netcdf4-getslices4.py  parallel-compute.py  zarr-data-converter.py  zarr-getslices.py  zarr-getslices3.py  zarr-getslices4.py
bench/: compare-evaluators-math.py  compare-evaluators-single.py  compare-evaluators-ufuncs.py  compare-evaluators.py  compare_dask.py  compare_dask_inmemory.py  compare_dask_ondisk.py  compare_matmul_dask.py  compare_reduce_dask.py  compare_reduce_dask_ondisk.py  compare_transpose_dask.py  constructors.py  expression-llvm.py  expression-multithreading.py  expression-var3.py  expression_chunks_blocks.py  matmul-dask.py  matmul-iarray.py  oindex.py  perf-comparison.py  perf-scalability.py  reduce-eye.py  udf-plainbuffer.py  udf.py
bench/tiledb/: TiledbExpression_Evaluation_(In-Memory).ipynb  TiledbExpression_Evaluation_(On-Disk)-mean.ipynb  TiledbExpression_Evaluation_(On-Disk)-trans.ipynb  TiledbExpression_Evaluation_(On-Disk)_tile.ipynb  TiledbReductions.ipynb  TiledbSlicing_Datasets_and_Creating_Views.ipynb
doc/: README.md  array-API-divergences.md  requirements_doc.txt
doc/scratch/: Linear_Algebra_gemv.ipynb  Neural_Networks.ipynb  expressions-memory-bench.ipynb  expressions-memory-dask.ipynb
doc/source/: bench  bench.rst  conf.py  config.rst  index.rst  install.rst  intro.rst  opt-tips.rst  reference.rst  tutorials  tutorials.rst  two-level-chunking.rst
doc/source/_static/: custom.css
doc/source/bench/: 03.Slicing_Datasets_and_Creating_Views.ipynb  05.Reductions_InMemory.ipynb  05.Reductions_OnDisk.ipynb  07.Expression_Evaluation_(User_Defined_Functions).ipynb  Expression_Evaluation_(On-Disk).ipynb  Expression_Evaluation_(User_Defined_Functions).ipynb  Reductions_InMemory.ipynb  Reductions_OnDisk.ipynb  Slicing_Datasets_and_Creating_Views.ipynb  dask_mean_disk.py  dask_mean_memory.py  iarray_mean_disk.py  iarray_mean_memory.py  (+2 more)
dockcross/: Dockerfile  install-conda.sh
docs/: conf.py  index.rst  requirements_doc.txt
docs/_static/: custom.css
docs/getting-started/: installation.rst
docs/user-guide/: creation.ipynb  creation.rst  random.ipynb
examples/: arange.py  array-function.py  array_persistency.py  array_view.py  block_rw_iterators.py  bug_open.py  classes.py  compare-evaluators.py  compare_dask.py  compare_dask_inmemory.py  container_persistency.py  context_bug.py  copy_array.py  copy_container.py  dist-random.py  error_prop.py  ex.py  expr_udf.py  expression.bc  expression.py  expression_bc.py  expression_chunks_blocks.py  expression_eval.py  expression_udf.py  expression_udf_multi.py  function_array.py  gemm.py  gemv.py  get_slice.py  iarray_eval.py  iterator.py  lazy_expr.py  lazy_expr_udf.py  llvm-eval.py  llvm_eval.py  matmul.py  matmul_eval.py  multidim_eval.py  orthogonal_selection.py  perf-against-numexpr.ipynb  (+24 more)
iarray/: CMakeLists.txt  __init__.py  _dtypes.py  attrs.py  ciarray_ext.pxd  config_params.py  constructors.py  container.py  dtypes.py  eudf.py  expr_udf.py  expression.py  expression_eval.py  high_level.py  http_server.py  iarray_container.py  iarray_ext.pyx  info.py  irandom.py  lazy_expr.py  random.py  udf.py  utils.py
iarray/py2llvm/: __init__.py  default.py  py2llvm.py  types.py
iarray/tests/: conftest.py  test_append.py  test_attrs.py  test_btune.py  test_config_params.py  test_constructor.py  test_copy.py  test_delete.py  test_eudf.py  test_expr_udf.py  test_expression.py  test_insert.py  test_iterator.py  test_lazyexpr.py  test_load_save.py  test_math.py  test_matmul.py  test_metalayers.py  test_oindex.py  test_opt_gemv.py  test_partition_advice.py  test_random.py  test_reduce.py  test_resize.py  test_seed.py  test_serialize.py  test_server.py  test_slice.py  test_split_concatenate.py  test_toscalars.py  test_transpose.py  test_type_view.py  test_udf.py  test_udf_lib.py  test_view.py  test_zproxy.py
notebooks/: Tunning iarray params.ipynb  expression-multithreading-poly-3900X.ipynb  expression-multithreading-poly.ipynb  expression-multithreading-trans.ipynb  expression-multithreading-trans0.ipynb  expression-multithreading-trans1.ipynb  expression-multithreading-trans2-var1-3900X.ipynb  expression-multithreading-trans2-var1.ipynb  expression-multithreading-trans2-var3-3900X.ipynb  expression-multithreading-trans2-var3.ipynb  expression-multithreading-trans2-var5-3900X.ipynb  expression-multithreading-trans2-var5.ipynb  expression-multithreading-trans2.ipynb  expression-multithreading.ipynb  matmul-memwatcher-Copy2.ipynb  matmul-memwatcher-persistent.ipynb  matmul-memwatcher.ipynb  matmul-multithreading.ipynb  matmul.ipynb  matmul.md  optimized-gemv.ipynb  udf_comparison.ipynb
py2llvm/: __init__.py  py2llvm.py
requirements/: README.md  build.txt  docs.txt  optional.txt  test.txt
scripts/: iarr_server.py
spark/: reduction-bench-copy.ipynb  reduction-bench.ipynb  reduction.ipynb  test-2.ipynb  test.ipynb
tests/: test_constructor.py  test_expression.py
(+279 files in other folders)
